--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kasa",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://a-c-morel.github.io/MORELAdeline_11_20072022",
 
   "dependencies": {
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "set PORT=3000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
